src/sass/options-button-defaults.scss
@import './mixins';

.uijettos {
    &-options-button {
        display: inline-block;
        margin: .5em auto;
        position: relative;
        &__main-button {
            @include baseButtonStyles;
            padding: .5em 2.75em .5em 1.75em;
        }
        &__options-trigger {
            position: absolute;
            right: 0;
            appearance: none;
            background: none;
            border: none;
            padding: 0;
            margin: 0;
            display: inline-flex;
            flex-direction: row;
            justify-content: center;
            align-items: center;
            width: 30px;
            height: 100%;
            cursor: pointer;
            &::before {
                content: "";
                display: block;
                width: 1px;
                height: 25px;
                position: absolute;
                left: 0;
                background-color: #CDCDCD;
            }
            &::after {
                content: "•";
            }
        }
        &__options-list {
            padding: 0;
            margin: .25em 0 0;
            position: absolute;
            background: inherit;
            left: 0;
            top: 100%;
            background: #FFF;
            width: 100%;
            border: 1px solid #ECECEC;
            border-radius: 4px;
            box-sizing: inherit;
            overflow: hidden;
            box-shadow: 0 0.2rem 0.5rem -0.3rem rgba(0,0,0,0.2);
        }
        &__option {
                -webkit-appearance: none;
            appearance: none;
            background: transparent;
            border: none;
            padding: 0 1em;
            margin: 0;
            display: block;
            height: 40px;
            width: 100%;
            text-align: left;
            border-bottom: 1px solid #f2f2f2;
            cursor: pointer;
            &:hover, &:focus {
                background-color: #f2f2f2;
            }
            &:last-child {
                border-bottom: none;
            }
        }
    }
}

